Fix missing cd in build hello world project

--- a/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/2-hello-world-gui.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/1-tour/2-hello-world-gui.mdx
@@ -13,7 +13,10 @@ Each C# project needs a new folder. Create a **HelloGui** folder for this one.
 ```bash
 # If you are in the Documents/Code/HelloWorld folder at the moment...
 cd ..
+# Make sure you are in your Documents/Code folder now!
 mkdir HelloGui
+# Now move into the folder - where the new project will go
+cd HelloGui
 dotnet new console
 dotnet add package SplashKit
 code .
