Add old videos on arrays as guided tour

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-00-overview.mdx
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/00-00-overview.mdx
@@ -1,6 +1,12 @@
 ---
 title: Overview
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="nb7xHTgXepE" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
+
 
 Arrays make it easier to work with multiple values, allowing you to have a single variable that stores multiple values. With arrays, you can start to create programs that process larger quantities of data with ease.
 
