Indicate optional guided tours

--- a/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/04-01-map.md
+++ b/src/content/docs/book/part-2-organised-code/5-working-with-multiples/1-tour/04-01-map.md
@@ -1,5 +1,7 @@
 ---
 title: Map Explorer
+banner: 
+  content: This is an optional tour - use it to extend your understanding.
 ---
 
 The next program we are going to look at developing is a top-down map explorer. This is commonly done by using a tile map - where the area to be explored is divided into a grid of tiles. The following images show two examples of this. The first is from the Google [Map Tiles API](https://developers.google.com/maps/documentation/tile), where you can use tiles to draw maps based on longitude and latitude data. The second example shows the use of this in a game setting. This example is from a [sprout lands asset pack](https://cupnooble.itch.io/sprout-lands-asset-pack) by [Cup Nooble](https://cupnooble.itch.io). For games, there are lots of different tile sets that you can find on the internet to help make your program look great.
