Move control flow guided tour and add optional notes

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/2-02-give-change.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/2-02-give-change.mdx
@@ -2,6 +2,8 @@
 title: Giving change
 sidebar:
   label: " - Giving change"
+banner: 
+  content: This is an optional tour - use it to extend your understanding.
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
