--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/2-0-change-calculator.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/2-0-change-calculator.mdx
@@ -1,5 +1,7 @@
 ---
 title: Change Calculator
+banner: 
+  content: This is an optional tour - use it to extend your understanding.
 ---
 import { Accordion, AccordionItem } from 'accessible-astro-components'
 
