Update hand execution and fix simple stats calculator

--- a/src/content/docs/book/part-1-instructions/3-control-flow/0-panorama/7-hand-execution.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/0-panorama/7-hand-execution.mdx
@@ -23,3 +23,9 @@ Hand execution is the process of manually following the instructions in code as 
 Keep the output simple. You want to create boxes for the variables on your page, and then update these as they change. You can take notes on the side for yourself, but the main thing is to step through it as the computer does. This will help you see what the algorithm does, and how it does it.
 
 :::
+
+## Example
+
+The following image shows an example of hand execution. The main thing is to capture the variables as boxes on your page, and use these to keep track of the values that change as the program runs.
+
+![Example of hand execution](../2-trailside/images/hand-execution.png)
