Fix variable name in event loop using wrong style

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-1-event-loop.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-tour/1-1-event-loop.mdx
@@ -119,4 +119,4 @@ Create a `PLAYER_SPEED` constant with the value 3. Add this to the `playerX` var
 
 Compile and run the program. What happens? Can you update the code to move the player in the other direction.
 
-Have a go at adding the code to move the player vertically as well. This will need a `player_y` variable.
+Have a go at adding the code to move the player vertically as well. This will need a `playerY` variable.
