Fix typo in memory deep dive example code comment

--- a/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2-trailside/03-1-alloc-array.mdx
+++ b/src/content/docs/book/part-2-organised-code/6-deep-dive-memory/2-trailside/03-1-alloc-array.mdx
@@ -157,7 +157,7 @@ int main()
         printf("The value on the heap is now %d.\n", p[i]);
     }
 
-    // free all sapce allocated
+    // free all space allocated
     free(p);
     p = nullptr;
 
