Add .NET 9 troubleshooting section

--- a/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
@@ -257,7 +257,7 @@ As you will be coding in C# and C++ in this book, let's look at the tools needed
 
 ### C# Tools
 
-For coding in C#, you will need to install the `.NET` SDK which will allow you to use the *dotnet* terminal command to create, build, and run your C# project code.
+For coding in C#, you will need to install the `.NET 8` SDK which will allow you to use the *dotnet* terminal command to create, build, and run your C# project code.
 
 :::note[.NET Installation Video:]
 <div class="not-content">
@@ -265,7 +265,11 @@ For coding in C#, you will need to install the `.NET` SDK which will allow you t
 </div>
 :::
 
-Download the latest version of the .NET SDK for Windows from the official .NET website: [dotnet.microsoft.com/download](https://dotnet.microsoft.com/download)
+Download the **.NET 8** SDK for Windows from the official .NET website: [dotnet.microsoft.com/download](https://dotnet.microsoft.com/en-us/download/dotnet/8.0)
+
+:::caution[.NET 9 Not compatible with SplashKit when using "dotnet run"]
+If you have installed .NET 9, check the [`dotnet run` unable to find SplashKit library](/book/appendix/0-installation/3-0-troubleshooting-install/#dotnet-run-unable-to-find-splashkit-library) section of the Troubleshooting page.
+:::
 
 Run the downloaded installer and follow on-screen instructions.
 
