Update MSYS2 install script

--- a/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
+++ b/src/content/docs/book/appendix/0-installation/2-5-setup-win-msys.mdx
@@ -225,6 +225,13 @@ Create a new line just before the last closing curly brace `}` at the end of the
         "MSYSTEM": "MINGW64",
         "CHERE_INVOKING": "1"
     },
+    "C_Cpp.default.systemIncludePath": [
+        "${default}",
+        "C:\\msys64\\mingw64\\bin\\**",
+        "C:\\msys64\\mingw64\\include\\**"
+    ],
+    "files.autoSave": "afterDelay",
+    "editor.formatOnSave": true,
 ```
 
 :::note[Troubleshooting Notes:]
