--- a/src/content/docs/book/part-0-getting-started/3-building-programs/2-trailside/04-1-hello-debugger.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/2-trailside/04-1-hello-debugger.mdx
@@ -134,10 +134,11 @@ Prefer to follow a video? We've got you covered!
 </div>
 
 In this video we demonstrate how to:
+
 1. Create a C# project
 2. Setup the 'Run and Debug' configuration, so you can get started with the debugger!
 
-### Debugging with breakpoints
+### Debugging with breakpoints Video
 
 <div class="not-content">
   <YouTube id="M_b601gHu2g" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
