Add extra version for MSYS2 users

--- a/src/content/docs/book/part-0-getting-started/3-building-programs/2-trailside/04-1-hello-debugger.mdx
+++ b/src/content/docs/book/part-0-getting-started/3-building-programs/2-trailside/04-1-hello-debugger.mdx
@@ -41,6 +41,36 @@ Practicing debugging in VS Code
 With SplashKit!
 ```
 
+:::note[Using MSYS2/MINGW64?]
+If you are using MSYS2/MINGW64, and get warnings with the code above, you can download/save these [Resources](/resources/code-examples/part-0/HelloDebuggerResources.zip).
+
+Unzip the zip file and place the `Resources` folder into your project folder.
+
+Then copy the following code into your Program.cs file:
+
+```cs
+using static SplashKitSDK.SplashKit;
+
+// download resources from online source
+LoadBitmap("sk-github-logo", "sk-github-logo");
+LoadFont("roboto-italic", "Roboto-Italic.ttf");
+
+// terminal text output
+WriteLine("Practicing debugging in VS Code");
+WriteLine("With SplashKit!");
+
+// simple gui window
+OpenWindow("SplashKit!", 400, 500);
+ClearScreen(RGBColor(250, 250, 250));
+DrawBitmap("sk-github-logo", 0, 0);
+RefreshScreen();
+DrawText("SplashKit!", ColorBlack(), "roboto-italic", 50, 90, 410);
+RefreshScreen();
+Delay(5000);
+```
+
+:::
+
 ## VS Code Debugger
 
 When you run the VS Code debugger in a C# project for the first time, you will need to set up the 'Run and Debug' configuration. To do this, follow the steps below:
